package com.danielcazalilla.tiendaCamisetas.model;

public enum Rol {
    OPERARIO, CLIENTE, GESTOR
}
